# parrot

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  config.py  data_models.py  exporter.py  llms.json  main.py  models.py  parrot.py  prompter.py  pyproject.toml
agents/: base_agent.py  csv_agent.py  factory.py  filters.py  parquet_agent.py  prompts.py  response.py  sql_agent.py
interactive/: chat_interface.py  commands.py  input_prompt.py  listeners.py
interactive/help/: help_display.py
src/parrot/: config.py  exporter.py  llm_loader.py  main.py  models.py  parrot.py  prompter.py
src/parrot/agents/: base_agent.py  csv_agent.py  factory.py  parquet_agent.py  prompts.py  response.py
src/parrot/db/: session.py
src/parrot/db/repositories/: chat_repository.py
src/parrot/interactive/: chat_interface.py  chat_reponse.py  chat_response.py  commands.py  listeners.py  message_processors.py
src/parrot/interactive/help/: help_content.py  help_display.py
src/parrot/models/: chat_session.py
src/parrot/prompts/: __init__.py  duckdb.md  prompt_loader.py  sql.md
src/parrot/rag/: ingestion_service.py  models.py
src/parrot/rag/storage/: bootstrap.py  db.py  metadata_repo.py
src/parrot/tui/: chat_tui.py  connect_screens.py
ui/: chat_interface.py  chat_reponse.py  input_prompt.py
ui/help/: help_display.py
