[project]
name = "parrot-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "fastparquet>=2024.11.0",
    "groq>=0.15.0",
    "inquirerpy>=0.3.4",
    "ollama>=0.5.3",
    "pandas>=2.2.3",
    "phidata>=2.7.9",
    "prompt-toolkit>=3.0.50",
    "psycopg2-binary>=2.9.10",
    "rich>=13.9.4",
    "sqlalchemy>=2.0.37",
    "textual>=1.0.0",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
